# RediML_AI_RAG_Project

./: .gitignore  02_embeddings_vectorstore.py  README.md  pyproject.toml  swagat_menu.csv
Rag_basicpipeline/: 03_rag_chain.py  data_loading.py
app/: streamlit_app.py
chroma_db/: chroma.sqlite3
data/: swagat_menu.csv
report/: project_description.md
restaurant-rag/: README.md
restaurant-rag/data_pipeline/: extract_text.py  extracted_menu.txt  generate_csv.py  verification_results.txt  verify_csv.py
restaurant-rag/src/: rag_chain.py  retriever.py  streamlit_app.py
src/: chunking.py  clean_menu_csv.py  data_loader.py  embeddings.py  retriever.py  vector_store.py
